--- a/blog/en-us/gsoc-2018.md
+++ b/blog/en-us/gsoc-2018.md
@@ -1,3 +1,9 @@
+---
+title: GSoC 2018
+keywords: Dubbo, GSoC
+description: The GSoC(Google Summer of Code) 2018 projects has been announced
+---
+
 The GSoC(Google Summer of Code) 2018 projects has been announced
 ---
 
