update blogs and docs

--- a/blog/zh-cn/2.7.5-release.md
+++ b/blog/zh-cn/2.7.5-release.md
@@ -18,13 +18,13 @@
 
 从 Java 实现版本的角度来说，Dubbo 是一个面向接口代理的服务开发框架，服务定义、服务发布以及服务引用都是基于接口，服务治理层面包括服务发现、各种规则定义也都是基于接口定义的，基于接口可以说是 Dubbo 的一大优势，比如向开发者屏蔽了远程调用细节、治理粒度更精细等。但基于接口的服务定义同时也存在一些问题，如服务，与业界通用的微服务体系等。
 
-![服务发现模型 老.png](https://intranetproxy.alipay.com/skylark/lark/0/2019/png/54037/1576678405626-86416fc2-2af1-488f-babd-6e975a6569d2.png)
+![服务发现模型 老.png](../../img/docs/servicediscovery-old.png)
 
 针对以上问题，2.7.5  版本引入了一种新的服务定义/治理机制：**服务自省**，简单来说这是一种基于应用粒度的服务治理方案。一个实例只向注册中心注册一条记录，彻底解决服务推送性能瓶颈，同时由于这样的模型与主流微服务体系如 SpringCloud、K8S 等天然是对等的，因此为 Dubbo 解决和此类异构体系间的互联互通清除了障碍。有兴趣进一步了解 Dubbo 服务自省机制如何解决异构微服务体系互联互通问题的，可具体参考我们之前的文章解析《Dubbo 如何成为联通异构微服务体系的最佳服务开发框架》。
 
 以下是服务自省机制的基本工作原理图。
 
-![9553BC67-F5EE-4E74-B638-3C768FCA81AC.png](https://intranetproxy.alipay.com/skylark/lark/0/2019/png/54037/1576678415429-07c5168b-7178-4048-8c82-1bd496800579.png)
+![9553BC67-F5EE-4E74-B638-3C768FCA81AC.png](../../img/docs/servicediscovery-old.png)
 
 要了解更多关于服务自省工作原理的细节，请参与官方文档及后续文章。
 
@@ -100,7 +100,7 @@ https://github.com/apache/dubbo/issues/2013
 
 **老的线程池模型**
 
-![消费端线程池.png](https://intranetproxy.alipay.com/skylark/lark/0/2019/png/54037/1576678440280-20f8a049-b5f2-4236-a5c7-107974a3a7e3.png)
+![消费端线程池.png](../../img/docs/consumer-threadpool0.png)
 
 我们重点关注 Consumer 部分：
 
@@ -113,7 +113,7 @@ https://github.com/apache/dubbo/issues/2013
 
 **2.7.5 版本引入的线程池模型**
 
-![消费端线程池新.png](https://intranetproxy.alipay.com/skylark/lark/0/2019/png/54037/1576678447990-0f881d31-7b96-4b00-ad5b-9c1796e2ae49.png)
+![消费端线程池新.png](../../img/docs/consumer-threadpool1.png)
 
 1. 业务线程发出请求，拿到一个 Future 实例。
 2. 在调用 future.get() 之前，先调用 ThreadlessExecutor.wait()，wait 会使业务线程在一个阻塞队列上等待，直到队列中被加入元素。
@@ -221,7 +221,7 @@ bootstrap.start();
 
 对于多注册中心订阅的场景，选址时的多了一层注册中心集群间的负载均衡：
 
-![C9FF4D0C-4DDD-4B06-9E6D-13A9C35C4E5E.png](https://intranetproxy.alipay.com/skylark/lark/0/2019/png/54037/1576678474500-4e8e3cca-4871-43a1-846f-b61a0ab4cc36.png)
+![C9FF4D0C-4DDD-4B06-9E6D-13A9C35C4E5E.png](../../img/docs/cluster-lb.png)
 
 在 Cluster Invoker 这一级，我们支持的选址策略有（2.7.5+ 版本，具体使用请参见文档）：
 
