update home page

--- a/en-us/blog/gsoc-2018.md
+++ b/en-us/blog/gsoc-2018.md
@@ -1,10 +1,10 @@
 ---
-title: 谷歌编程之夏会议上2018个项目被宣布
+title: GSoC 2018
 keywords: Dubbo, GSoC
-description: 谷歌编程之夏会议上2018个项目被宣布，Dubbo位列其中。
+description: The GSoC(Google Summer of Code) 2018 projects has been announced
 ---
 
-谷歌编程之夏会议上2018个项目被宣布
+The GSoC(Google Summer of Code) 2018 projects has been announced
 ---
 
-谷歌编程之夏会议上2018个项目被宣布, Raghu Reddy 的项目"Apache Dubbo 扩展串行协议支持" 被[接受](https://summerofcode.withgoogle.com/projects/#4747840161579008)! 祝贺他!
+The GSoC(Google Summer of Code) 2018 projects has been announced, Raghu Reddy's project "Extending Serialization protocols support for Apache Dubbo" has been [accepted](https://summerofcode.withgoogle.com/projects/#4747840161579008)! Congratulations!
