--- a/zh-cn/blog/2.7.5-release.md
+++ b/zh-cn/blog/2.7.5-release.md
@@ -165,7 +165,7 @@ if (!mutualTls) {}
 
 为尽可能保证应用启动的灵活性，TLS Cert 的指定还能通过 -D 参数或环境变量等方式来在启动阶段根据部署环境动态指定，具体请参见 Dubbo 配置读取规则与 TLS 示例
 
-Dubbo 配置读取规则：http://dubbo.apache.org/zh-cn/docs/user/configuration/configuration-load-process.html
+Dubbo 配置读取规则：[查看](../docs/2.7/user/configuration/configuration-load-process.md)
 
 TLS 示例：https://github.com/apache/dubbo-samples/tree/master/java/dubbo-samples-ssl
 
