--- a/content/zh/blog/releases/3.0.2.1.md
+++ b/content/zh/blog/releases/3.0.2.1.md
@@ -13,4 +13,4 @@ description: >
 
 - 修复 nacos group 在消费者端不生效的问题 (#8533)
 - 修复请求超时时序列化检查的 NPE (#8547)
-- 兼容使用 dubbo-all 是未导入 farbic-io 包的问题 (#8546)
+- 兼容使用 dubbo-all 时未导入 farbic-io 包的问题 (#8546)
