--- a/content/zh/docs3-building/java-sdk/upgrades-and-compatibility/3.0-to-3.1-compatibility-guide.md
+++ b/content/zh/docs3-building/java-sdk/upgrades-and-compatibility/3.0-to-3.1-compatibility-guide.md
@@ -19,5 +19,5 @@ description: "快速了解 Dubbo 3.1 的升级步骤与兼容性"
 注意事项：
 
 1. 请检查注册中心 URL 上是否已经配置了 group 属性，如果是的话需要检查服务端和消费端的 group 是否都一致，如果不一致请修改为一致
-2. 如果不希望 group 重新对齐到 Nacos 注册中心中的 group 分组，可以配置 xxx（TBD）全局属性值忽略该功能
+2. 如果不希望 group 重新对齐到 Nacos 注册中心中的 group 分组，可以配置 `dubbo.nacos-service-discovery.use-default-group=false` 全局属性值忽略该功能
 
