Update credits, add error code 2-2.

--- a/content/zh/docs3-v2/java-sdk/faq/6/2.md
+++ b/content/zh/docs3-v2/java-sdk/faq/6/2.md
@@ -22,6 +22,6 @@ weight: 2
 ## 致谢
 这个错误码的 FAQ 页面参考了空冥同学的 [《Dubbo 常见错误及解决方法》](https://github.com/StabilityMan/StabilityGuide/blob/master/docs/diagnosis/plugin/rpc/%E7%B3%BB%E7%BB%9F%E7%A8%B3%E5%AE%9A%E6%80%A7%E2%80%94%E2%80%94Dubbo%E5%B8%B8%E8%A7%81%E9%94%99%E8%AF%AF%E5%8F%8A%E8%A7%A3%E5%86%B3%E6%96%B9%E6%B3%95.md) 。
 
-这篇文章采用了 [CC-BY-4.0](http://creativecommons.org/licenses/by/4.0/) 协议。在此表示感谢。
+所引文章通过 [CC-BY-4.0](http://creativecommons.org/licenses/by/4.0/) 协议赋予了汇编的权利。在此向原作者表示感谢。
 
 <p style="margin-top: 3rem;"> </p>
