Update title of 4-2.

--- a/content/zh/docs3-v2/java-sdk/faq/4/2.md
+++ b/content/zh/docs3-v2/java-sdk/faq/4/2.md
@@ -1,7 +1,7 @@
 ---
 type: docs
-title: "4-2 - 不支持的协议"
-linkTitle: "4-2 - 不支持的协议"
+title: "4-2 - 用指定的协议为条件找不到服务实例"
+linkTitle: "4-2 - 用指定的协议为条件找不到服务实例"
 weight: 2
 ---
 
@@ -11,7 +11,7 @@ weight: 2
 
 
 
-## 对策
+## 排查和解决步骤
 
 
 
