--- a/content/zh/docs/languages/golang/dubbo-go-3.0/preface/3.0_feature.md
+++ b/content/zh/docs/languages/golang/dubbo-go-3.0/preface/3.0_feature.md
@@ -17,7 +17,7 @@ description: dubbo-go 3.0 新特性的介绍
 
 ### 1.1 概述
 
-![](../../pic/3.0/tri.png)
+[//]: # (![]&#40;../../pic/3.0/tri.png&#41;)
 
 - 通信层面
 
@@ -42,7 +42,7 @@ description: dubbo-go 3.0 新特性的介绍
 
 ### 2.1 简介
 
-![](../../pic/3.0/disc.png)
+[//]: # (![]&#40;../../pic/3.0/disc.png&#41;)
 
 在服务注册阶段，服务端实例将应用级别的注册信息，主要包含从应用名到实例IP的映射注册到注册中心。在服务发现阶段，客户端实例，通过注册中心获取到需要请求的服务实例IP。进入服务自省阶段，服务自省过程为通过应用信息获取接口信息的过程。如上图，包含两种模式：
 
@@ -63,11 +63,11 @@ description: dubbo-go 3.0 新特性的介绍
 
 virtual_service.yaml
 
-![](../../pic/3.0/virtual_service.png)
+[//]: # (![]&#40;../../pic/3.0/virtual_service.png&#41;)
 
 以及 dist_rule.yml
 
-![](../../pic/3.0/dest_rule.png)
+[//]: # (![]&#40;../../pic/3.0/dest_rule.png&#41;)
 
 框架可根据路由文件针对特定的请求进行流量转发。
 
@@ -76,4 +76,4 @@ virtual_service.yaml
 阿里云官方介绍文章：[《Dubbo 3.0 - 开启下一代云原生微服务》](https://developer.aliyun.com/article/770964?utm_content=g_1000175535)
 
 
-下一章：[【快速开始】](../quickstart/3.0/quickstart_triple.html)
+下一章：[【快速开始】](../../quickstart/quickstart_triple/)
