--- a/content/zh/docs3-v2/java-sdk/upgrades-and-compatibility/2.x-to-3.x-compatibility-guide.md
+++ b/content/zh/docs3-v2/java-sdk/upgrades-and-compatibility/2.x-to-3.x-compatibility-guide.md
@@ -33,14 +33,12 @@ description: "快速了解 Dubbo3 的升级步骤与兼容性"
 Dubbo 3.0 提供的新特性包括：
 
 * **新的地址发现模型（应用级服务发现）。**
-   * 查看[应用级服务发现的迁移步骤](../migration-service-discovery)
-   * 查看[应用级服务发现的使用方式]()
-   * 查看[应用级服务发现设计与实现]()。
+  * 查看[应用级服务发现迁移示例](../service-discovery/migration-service-discovery/service-discovery-samples/)。
+   * 查看[应用级服务发现的迁移步骤](../service-discovery/migration-service-discovery/)
+   * 查看[应用级服务发现地址迁移规则说明](../service-discovery/service-discovery-rule/)
 * **下一代基于 HTTP/2 的 Triple 协议。**
-   * 查看[Triple 协议迁移步骤](../migration-triple)
-   * 查看 [Triple 协议使用方式](../../references/protocols/tri)
-   * 查看 Triple 协议设计与实现。
+   * 查看[Triple 协议迁移步骤](../migration-triple/)
+   * 查看 [Triple 协议使用方式](../../reference-manual/protocol/triple/guide/)
+   * 查看 [Triple 协议设计与实现](../../reference-manual/protocol/triple/overview/)。
 * **统一的路由规则。**
-   * 查看[统一路由规则的迁移步骤](../migration-routingrule)
-   * 查看[统一路由规则使用方式](../../references/routerule)
-   * 查看统一路由规则设计与实现
+   * 查看[统一路由规则设计与实现](/zh/docs3-v2/java-sdk/advanced-features-and-usage/service/routing/mesh-style/)
