--- a/content/zh/docs3-v2/golang-sdk/concept/more/3.0_feature.md
+++ b/content/zh/docs3-v2/golang-sdk/concept/more/3.0_feature.md
@@ -10,7 +10,7 @@ keywords: dubbo-go 3.0 新特性
 
 ### 1.1 概述
 
-![](https://github.com/dubbogo/dubbogo.github.io/blob/master/docs/zh-cn/pic/3.0/tri.png?raw=true)
+![](/imgs/docs3-v2/golang-sdk/concept/more/3.0_feature/tri.png)
 
 - 通信层面
 
@@ -35,7 +35,7 @@ keywords: dubbo-go 3.0 新特性
 
 ### 2.1 简介
 
-![](https://github.com/dubbogo/dubbogo.github.io/blob/master/docs/zh-cn/pic/3.0/disc.png?raw=true)
+![](/imgs/docs3-v2/golang-sdk/concept/more/3.0_feature/disc.png)
 
 在服务注册阶段，服务端实例将应用级别的注册信息，主要包含从应用名到实例IP的映射注册到注册中心。在服务发现阶段，客户端实例，通过注册中心获取到需要请求的服务实例IP。进入服务自省阶段，服务自省过程为通过应用信息获取接口信息的过程。如上图，包含两种模式：
 
@@ -56,11 +56,11 @@ keywords: dubbo-go 3.0 新特性
 
 virtual_service.yaml
 
-![](https://github.com/dubbogo/dubbogo.github.io/blob/master/docs/zh-cn/pic/3.0/virtual_service.png?raw=true)
+![](/imgs/docs3-v2/golang-sdk/concept/more/3.0_feature/virtual_service.png)
 
 以及 dist_rule.yml
 
-![](https://github.com/dubbogo/dubbogo.github.io/blob/master/docs/zh-cn/pic/3.0/dest_rule.png?raw=true)
+![](/imgs/docs3-v2/golang-sdk/concept/more/3.0_feature/dest_rule.png)
 
 框架可根据路由文件针对特定的请求进行流量转发。
 
