--- a/content/zh/overview/tasks/migration/2to3.md
+++ b/content/zh/overview/tasks/migration/2to3.md
@@ -1,7 +1,7 @@
 ---
 type: docs
-title: "2.x 升级至 3.x 操作指南"
-linkTitle: "2.x 升级至 3.x 操作指南"
+title: "升级到 Dubbo3"
+linkTitle: "升级到 Dubbo3"
 weight: 1
 description: "快速了解 Dubbo 3 的升级步骤与兼容性"
 ---
