--- a/content/zh/docs3-v2/java-sdk/faq/1/9.md
+++ b/content/zh/docs3-v2/java-sdk/faq/1/9.md
@@ -9,6 +9,7 @@ weight: 9
 1. 多个 Dubbo 进程（或其他 Java 进程）使用了同一个缓存文件。
 2. 由于缓存文件所在目录的文件系统权限问题，导致读写失败。
 3. `dubbo.registry.file` 的值输入错误。
+4. 不小心指定了两个注册中心使用同一文件存储。
 
 {{% pageinfo %}}
 **提示：**
@@ -22,5 +23,9 @@ weight: 9
 1. 检查 `dubbo.registry.file` 的值有无拼写错误。
 2. 检查是否有其它进程使用了同一份缓存文件。
 3. 如果指定了 `dubbo.registry.file`，那么检查下它在文件系统的权限。
+4. 排查是否出现了“两个注册中心使用了同一文件存储” 这一情况，如果出现则调整。
+
+## 另请参阅
+[注册中心的配置项参考手册](https://dubbo.apache.org/zh/docs3-v2/java-sdk/reference-manual/config/properties/#registry)
 
 <p style="margin-top: 3rem;"> </p>
