--- a/content/zh/docs3-v2/java-sdk/faq/4/1.md
+++ b/content/zh/docs3-v2/java-sdk/faq/4/1.md
@@ -6,13 +6,16 @@ weight: 1
 ---
 
 ## 可能的原因
-
-
-
+这种情况可能出现在自定义 Protocol 的场景下。Dubbo 的 SPI 机制找不到 URL 中所指定的 Protocol。
 
 
 ## 排查和解决步骤
+1. 确定 Consumer 中有服务端所用到的 Protocol 的依赖。
+2. 确定 Protocol 的依赖包的 SPI 配置文件的名字没有写错。
 
+## 另请参阅
+[Dubbo SPI 概述](https://dubbo.apache.org/zh/docs3-v2/java-sdk/reference-manual/spi/overview/)
 
+[协议扩展说明](https://dubbo.apache.org/zh/docs3-v2/java-sdk/reference-manual/spi/description/protocol/)
 
 <p style="margin-top: 3rem;"> </p>
