--- a/content/zh/docs3-v2/java-sdk/faq/1/1.md
+++ b/content/zh/docs3-v2/java-sdk/faq/1/1.md
@@ -7,9 +7,11 @@ weight: 1
 
 ## 可能的原因
 1. Provider 端配置的 `service.group` 和 Consumer 端配置的 `reference.group` （即服务分组的配置）不匹配。 
+2. Provider 端配置的 `service.version` 和 Consumer 端配置的 `reference.version` （即服务分组的配置）不匹配。 
 
 ## 排查和解决步骤
 1. 确保 Provider 和 Consumer 端的服务分组配置相对应。
+2. 确保 Provider 和 Consumer 端的服务版本配置相对应。
 
 ## 另请参阅
 [配置项参考手册](../../../reference-manual/config/properties)
