--- a/content/zh/docs3-v2/java-sdk/faq/1/1.md
+++ b/content/zh/docs3-v2/java-sdk/faq/1/1.md
@@ -1,13 +1,13 @@
 ---
 type: docs
-title: "1-1 - 地址非法"
-linkTitle: "1-1 - 地址非法"
+title: "1-1 - 地址非法（服务版本或分组不匹配）"
+linkTitle: "1-1 - 地址非法（服务版本或分组不匹配）"
 weight: 1
 ---
 
 ## 可能的原因
 1. Provider 端配置的 `service.group` 和 Consumer 端配置的 `reference.group` （即服务分组的配置）不匹配。 
-2. Provider 端配置的 `service.version` 和 Consumer 端配置的 `reference.version` （即服务分组的配置）不匹配。 
+2. Provider 端配置的 `service.version` 和 Consumer 端配置的 `reference.version` （即服务版本的配置）不匹配。 
 
 ## 排查和解决步骤
 1. 确保 Provider 和 Consumer 端的服务分组配置相对应。
