--- a/content/zh/docs3-v2/java-sdk/faq/2/3.md
+++ b/content/zh/docs3-v2/java-sdk/faq/2/3.md
@@ -10,8 +10,7 @@ weight: 2
 * 用户自定义路由未按规范编写。
 
 ## 排查和解决步骤
-1. 参照社区SPI扩展使用手册，检查用户自定义路由，手册链接:https://dubbo.apache.org/zh/docs3-v2/java-sdk/reference-manual/spi/。
-
+1. 参照社区SPI扩展使用手册，检查用户自定义路由，[《SPI 扩展使用手册》](https://dubbo.apache.org/zh/docs3-v2/java-sdk/reference-manual/spi/)。
 
 
 
